[tool.poetry]
name = "chat"
version = "0.1.0"
description = ""
authors = ["Oleksandr Study"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.9.3"
names = "^0.3.0"
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
